# HW_VM_tasks

./: .gitignore  README.md
Stack/: .clang-tidy  CMakeLists.txt  README.md  mystack.h
Stack/include/: mystack.h  mystack.hh  mystack_bool.h  mystack_bool_impl.hh  mystack_impl.hh
Stack/src/: mystack_bool.cc  mystack_bool_impl.cc
Stack/tests/: CMakeLists.txt  gen_data.py  mystack_highload_test.cc  mystack_utests.cc
Stack/tests/mystack_utests/: tests_main.cc
complex_number_class/: .gitignore  Makefile  complex  complex.cpp  complex.h  main.cpp  test.cpp  tests
